[DUOS-2109][risk=no] New Election cleanup (#1874)
* archive when creating elections for a dar collection